bug#44276  NdbTick assert() in Ndbif.cpp